post 3 - gantt graphs

--- a/.ipynb/2017-03-13_russian-writers-csv.ipynb
+++ b/.ipynb/2017-03-13_russian-writers-csv.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -200,83 +200,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Task</th>\n",
-       "      <th>Start</th>\n",
-       "      <th>Finish</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alexander Ablesimov</td>\n",
-       "      <td>1742</td>\n",
-       "      <td>1783.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Fyodor Abramov</td>\n",
-       "      <td>1920</td>\n",
-       "      <td>1983.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Grigory Adamov</td>\n",
-       "      <td>1886</td>\n",
-       "      <td>1945.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Georgy Adamovich</td>\n",
-       "      <td>1892</td>\n",
-       "      <td>1972.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Alexander Afanasyev</td>\n",
-       "      <td>1826</td>\n",
-       "      <td>1871.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  Task  Start  Finish\n",
-       "0  Alexander Ablesimov   1742  1783.0\n",
-       "1       Fyodor Abramov   1920  1983.0\n",
-       "2       Grigory Adamov   1886  1945.0\n",
-       "3     Georgy Adamovich   1892  1972.0\n",
-       "4  Alexander Afanasyev   1826  1871.0"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.DataFrame.from_csv(StringIO(requests.get(RUS_WITERS_CSV).text), index_col=None, sep=';')\n",
-    "df = df[['name', 'birth_year', 'death_year']]\n",
-    "df.rename(columns={'name': 'Task', 'birth_year': 'Start', 'death_year': 'Finish'}, inplace=True)\n",
-    "df.head()"
+    "df = pd.DataFrame.from_csv(StringIO(requests.get(RUS_WITERS_CSV).text), index_col=None, sep=';')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First – prettier looking multi-color Gantt style graph.<br/>\n",
+    "Which much easier to code in addition.\n",
+    "But no edit mode out of the box (you'll see later)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -284,13 +228,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~boorstat/16.embed\" height=\"600px\" width=\"900px\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~boorstat/32.embed\" height=\"600px\" width=\"900px\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,43 +243,102 @@
     "import plotly.figure_factory as FF\n",
     "import math\n",
     "\n",
-    "RUS_WRITERS_FAVS = ['Dostoyevsky', 'Tolstoy', 'Gogol']\n",
+    "RUS_WRITERS_FAVS = [\n",
+    "    'Leo Tolstoy',\n",
+    "    'Fyodor Dostoyevsky',\n",
+    "    'Mikhail Bulgakov',\n",
+    "    'Aleksandr Solzhenitsyn',\n",
+    "    'Alexander Pushkin',\n",
+    "    'Ivan Turgenev',\n",
+    "    'Anton Chekhov',\n",
+    "    'Alexander Blok',\n",
+    "    'Ivan Bunin',\n",
+    "    'Marina Tsvetaeva',\n",
+    "    'Nikolai Gogol',\n",
+    "    'Mikhail Lermontov',    \n",
+    "    'Maxim Gorky',\n",
+    "    'Boris Pasternak',\n",
+    "    'Vladimir Mayakovsky',\n",
+    "    'Ivan Goncharov',\n",
+    "    'Nikolai Leskov',\n",
+    "    'Mikhail Saltykov-Shchedrin',\n",
+    "    'Sergei Yesenin',\n",
+    "    'Isaak Babel',\n",
+    "    'Andrei Bely',\n",
+    "    'Ivan Krylov',\n",
+    "    'Osip Mandelstam',\n",
+    "    'Mikhail Sholokhov',\n",
+    "    'Anna Akhmatova',\n",
+    "    'Nikolay Nekrasov',\n",
+    "]\n",
     "\n",
-    "# df = [dict(Task=\"Job A\", Start='2009-01-01', Finish='2009-02-28'),\n",
-    "#       dict(Task=\"Job B\", Start='2009-03-05', Finish='2009-04-15'),\n",
-    "#       dict(Task=\"Job C\", Start='2009-02-20', Finish='2009-05-30')]\n",
-    "df = pd.DataFrame.from_csv(StringIO(requests.get(RUS_WITERS_CSV).text), index_col=None, sep=';')\n",
-    "df = df[['name', 'birth_year', 'death_year']]\n",
-    "df.rename(columns={'name': 'Task', 'birth_year': 'Start', 'death_year': 'Finish'}, inplace=True)\n",
-    "# df['Start'] = df[['Start']].apply(lambda v: print(str(v[0])), axis=1)\n",
-    "# df[:10]\n",
-    "                                  \n",
-    "df['Start'] = df[['Start']].apply(lambda v: '{}-01-01'.format(str(int(v))), axis=1)\n",
-    "df['Finish'] = df[['Finish']].apply(lambda v: '{}-12-31'.format(str(int(v)) if not math.isnan(v) else '2020'), axis=1)\n",
+    "df_gantt = df[['name', 'birth_year', 'death_year']].copy()\n",
+    "df_gantt.rename(columns={'name': 'Task', 'birth_year': 'Start', 'death_year': 'Finish'}, inplace=True)\n",
     "\n",
-    "df = df[df['Task'].map(lambda v: any([w in v for w in RUS_WRITERS_FAVS]))]\n",
-    "df.reset_index(inplace=True)\n",
+    "df_gantt = df_gantt[df_gantt['Task'].map(\n",
+    "    lambda v: any([w in v for w in RUS_WRITERS_FAVS]))]\n",
     "\n",
-    "def _rename(name):\n",
-    "    parts = '<br>'.join(name.split())\n",
-    "    return '{name}{surname}'.format(\n",
-    "        name='{}<br>'.format(name[0]) if len(parts) > 1 else '',\n",
-    "        surname=parts[-1])\n",
+    "df_gantt_birth = df_gantt.copy()\n",
     "\n",
-    "df['Task'] = df[['Task']].apply(lambda v: '<br>'.join(str(v[0]).split()), axis=1)\n",
+    "df_gantt_birth.sort_values(['Start'], inplace=True)\n",
     "\n",
-    "fig = FF.create_gantt(df, showgrid_x=True, showgrid_y=True)\n",
-    "py.iplot(fig, filename='russian-writers-years-of-life', world_readable=True)"
+    "df_gantt_birth.reset_index(inplace=True, drop=True)\n",
+    "\n",
+    "df_gantt_birth['Task'] = df_gantt_birth[['Task']].apply(\n",
+    "    lambda v: v[0].split()[-1], axis=1)\n",
+    "\n",
+    "df_gantt_birth['Start'] = df_gantt_birth[['Start']].apply(\n",
+    "    lambda v: '{}-12-31'.format(str(int(v[0]))), axis=1)\n",
+    "df_gantt_birth['Finish'] = df_gantt_birth[['Finish']].apply(\n",
+    "    lambda v: '{}-12-31'.format(str(int(v[0])) if not math.isnan(v[0]) else '2020'), axis=1)\n",
+    "\n",
+    "fig = FF.create_gantt(\n",
+    "    df_gantt_birth, showgrid_x=True, showgrid_y=True,\n",
+    "    title='Famous Russian Writers Years of Life sotred by Birth')\n",
+    "py.iplot(fig, filename='russian-writers-years-of-life-start-sorted', world_readable=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~boorstat/34.embed\" height=\"600px\" width=\"900px\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_gantt_len = df_gantt.copy()\n",
+    "\n",
+    "df_gantt_len['life_len'] = df_gantt_len[['Start', 'Finish']].apply(lambda v: int(v[1] - int(v[0])), axis=1)\n",
+    "df_gantt_len.sort_values(['life_len'], inplace=True)\n",
+    "df_gantt_len.reset_index(inplace=True, drop=True)\n",
+    "\n",
+    "df_gantt_len['Task'] = df_gantt_len[['Task', 'life_len']].apply(\n",
+    "    lambda v: '{name} [{len}]'.format(name=v[0].split()[-1], len=v[1]), axis=1)\n",
+    "\n",
+    "df_gantt_len['Start'] = df_gantt_len[['Start']].apply(\n",
+    "    lambda v: '{}-12-31'.format(str(int(v[0]))), axis=1)\n",
+    "df_gantt_len['Finish'] = df_gantt_len[['Finish']].apply(\n",
+    "    lambda v: '{}-12-31'.format(str(int(v[0])) if not math.isnan(v[0]) else '2020'), axis=1)\n",
+    "\n",
+    "fig = FF.create_gantt(\n",
+    "    df_gantt_len, showgrid_x=True, showgrid_y=True,\n",
+    "    title='Famous Russian Writers Years of Life sotred by Length')\n",
+    "py.iplot(fig, filename='russian-writers-years-of-life-len-sorted', world_readable=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -347,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -360,143 +363,108 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>birth_year</th>\n",
-       "      <th>death_year</th>\n",
-       "      <th>about</th>\n",
-       "      <th>works</th>\n",
+       "      <th>index</th>\n",
+       "      <th>Task</th>\n",
+       "      <th>Start</th>\n",
+       "      <th>Finish</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Alexander Ablesimov</td>\n",
-       "      <td>1742</td>\n",
-       "      <td>1783.0</td>\n",
-       "      <td>opera librettist, poet, dramatist, satirist an...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Anna Akhmatova</td>\n",
+       "      <td>1889-12-31</td>\n",
+       "      <td>1966-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Fyodor Abramov</td>\n",
-       "      <td>1920</td>\n",
-       "      <td>1983.0</td>\n",
-       "      <td>novelist and short story writer</td>\n",
-       "      <td>Two Winters and Three Summers</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Isaak Babel</td>\n",
+       "      <td>1894-12-31</td>\n",
+       "      <td>1940-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Grigory Adamov</td>\n",
-       "      <td>1886</td>\n",
-       "      <td>1945.0</td>\n",
-       "      <td>science fiction writer</td>\n",
-       "      <td>The Mystery of the Two Oceans</td>\n",
+       "      <td>70</td>\n",
+       "      <td>Andrei Bely</td>\n",
+       "      <td>1880-12-31</td>\n",
+       "      <td>1934-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Georgy Adamovich</td>\n",
-       "      <td>1892</td>\n",
-       "      <td>1972.0</td>\n",
-       "      <td>poet, critic, memoirist, tanslator</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>83</td>\n",
+       "      <td>Alexander Blok</td>\n",
+       "      <td>1880-12-31</td>\n",
+       "      <td>1921-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Alexander Afanasyev</td>\n",
-       "      <td>1826</td>\n",
-       "      <td>1871.0</td>\n",
-       "      <td>folklorist who recorded and published over 600...</td>\n",
-       "      <td>Russian Fairy Tales</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Mikhail Bulgakov</td>\n",
+       "      <td>1891-12-31</td>\n",
+       "      <td>1940-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Alexander Afanasyev-Chuzhbinsky</td>\n",
-       "      <td>1816</td>\n",
-       "      <td>1875.0</td>\n",
-       "      <td>poet, writer, ethnographer and translator</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>103</td>\n",
+       "      <td>Ivan Bunin</td>\n",
+       "      <td>1870-12-31</td>\n",
+       "      <td>1953-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Alexander Afinogenov</td>\n",
-       "      <td>1904</td>\n",
-       "      <td>1941.0</td>\n",
-       "      <td>playwright</td>\n",
-       "      <td>A Far Place</td>\n",
+       "      <td>113</td>\n",
+       "      <td>Anton Chekhov</td>\n",
+       "      <td>1860-12-31</td>\n",
+       "      <td>1904-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>M. Ageyev</td>\n",
-       "      <td>1898</td>\n",
-       "      <td>1973.0</td>\n",
-       "      <td>pseudonymous writer</td>\n",
-       "      <td>Cocain Romance</td>\n",
+       "      <td>139</td>\n",
+       "      <td>Fyodor Dostoyevsky</td>\n",
+       "      <td>1821-12-31</td>\n",
+       "      <td>1881-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Chinghiz Aitmatov</td>\n",
-       "      <td>1928</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Kyrgyz novelist and short story writer,Jamilya...</td>\n",
+       "      <td>193</td>\n",
+       "      <td>Nikolai Gogol</td>\n",
+       "      <td>1809-12-31</td>\n",
+       "      <td>1852-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>David Aizman</td>\n",
-       "      <td>1869</td>\n",
-       "      <td>1922.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Russian-Jewish writer and playwright</td>\n",
+       "      <td>196</td>\n",
+       "      <td>Ivan Goncharov</td>\n",
+       "      <td>1812-12-31</td>\n",
+       "      <td>1891-12-31</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              name  birth_year  death_year  \\\n",
-       "0              Alexander Ablesimov        1742      1783.0   \n",
-       "1                   Fyodor Abramov        1920      1983.0   \n",
-       "2                   Grigory Adamov        1886      1945.0   \n",
-       "3                 Georgy Adamovich        1892      1972.0   \n",
-       "4              Alexander Afanasyev        1826      1871.0   \n",
-       "5  Alexander Afanasyev-Chuzhbinsky        1816      1875.0   \n",
-       "6             Alexander Afinogenov        1904      1941.0   \n",
-       "7                        M. Ageyev        1898      1973.0   \n",
-       "8                Chinghiz Aitmatov        1928      2008.0   \n",
-       "9                     David Aizman        1869      1922.0   \n",
-       "\n",
-       "                                               about  \\\n",
-       "0  opera librettist, poet, dramatist, satirist an...   \n",
-       "1                    novelist and short story writer   \n",
-       "2                             science fiction writer   \n",
-       "3                 poet, critic, memoirist, tanslator   \n",
-       "4  folklorist who recorded and published over 600...   \n",
-       "5          poet, writer, ethnographer and translator   \n",
-       "6                                         playwright   \n",
-       "7                                pseudonymous writer   \n",
-       "8                                                NaN   \n",
-       "9                                                NaN   \n",
-       "\n",
-       "                                               works  \n",
-       "0                                                NaN  \n",
-       "1                      Two Winters and Three Summers  \n",
-       "2                      The Mystery of the Two Oceans  \n",
-       "3                                                NaN  \n",
-       "4                                Russian Fairy Tales  \n",
-       "5                                                NaN  \n",
-       "6                                        A Far Place  \n",
-       "7                                     Cocain Romance  \n",
-       "8  Kyrgyz novelist and short story writer,Jamilya...  \n",
-       "9               Russian-Jewish writer and playwright  "
+       "   index                Task       Start      Finish\n",
+       "0     11      Anna Akhmatova  1889-12-31  1966-12-31\n",
+       "1     48         Isaak Babel  1894-12-31  1940-12-31\n",
+       "2     70         Andrei Bely  1880-12-31  1934-12-31\n",
+       "3     83      Alexander Blok  1880-12-31  1921-12-31\n",
+       "4    100    Mikhail Bulgakov  1891-12-31  1940-12-31\n",
+       "5    103          Ivan Bunin  1870-12-31  1953-12-31\n",
+       "6    113       Anton Chekhov  1860-12-31  1904-12-31\n",
+       "7    139  Fyodor Dostoyevsky  1821-12-31  1881-12-31\n",
+       "8    193       Nikolai Gogol  1809-12-31  1852-12-31\n",
+       "9    196      Ivan Goncharov  1812-12-31  1891-12-31"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[:10]"
+    "df_gantt[:10]"
    ]
   },
   {
@@ -554,18 +522,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
   }
  },
  "nbformat": 4,
