post 3 - bars graph

--- a/.ipynb/2017-03-13_russian-writers-csv.ipynb
+++ b/.ipynb/2017-03-13_russian-writers-csv.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +234,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
     "import plotly.figure_factory as FF\n",
     "import math\n",
     "\n",
-    "RUS_WRITERS_FAVS = [\n",
+    "FAMOUS_RUS_WRITERS = [\n",
     "    'Leo Tolstoy',\n",
     "    'Fyodor Dostoyevsky',\n",
     "    'Mikhail Bulgakov',\n",
@@ -276,7 +276,7 @@
     "df_gantt.rename(columns={'name': 'Task', 'birth_year': 'Start', 'death_year': 'Finish'}, inplace=True)\n",
     "\n",
     "df_gantt = df_gantt[df_gantt['Task'].map(\n",
-    "    lambda v: any([w in v for w in RUS_WRITERS_FAVS]))]\n",
+    "    lambda v: any([w in v for w in FAMOUS_RUS_WRITERS]))]\n",
     "\n",
     "df_gantt_birth = df_gantt.copy()\n",
     "\n",
@@ -290,12 +290,19 @@
     "df_gantt_birth['Start'] = df_gantt_birth[['Start']].apply(\n",
     "    lambda v: '{}-12-31'.format(str(int(v[0]))), axis=1)\n",
     "df_gantt_birth['Finish'] = df_gantt_birth[['Finish']].apply(\n",
-    "    lambda v: '{}-12-31'.format(str(int(v[0])) if not math.isnan(v[0]) else '2020'), axis=1)\n",
+    "    lambda v: '{}-12-31'.format(str(int(v[0]))), axis=1)\n",
     "\n",
     "fig = FF.create_gantt(\n",
     "    df_gantt_birth, showgrid_x=True, showgrid_y=True,\n",
     "    title='Famous Russian Writers Years of Life sotred by Birth')\n",
     "py.iplot(fig, filename='russian-writers-years-of-life-start-sorted', world_readable=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And the same but sorted by length of life:"
    ]
   },
   {
@@ -331,13 +338,120 @@
     "\n",
     "df_gantt_len['Start'] = df_gantt_len[['Start']].apply(\n",
     "    lambda v: '{}-12-31'.format(str(int(v[0]))), axis=1)\n",
-    "df_gantt_len['Finish'] = df_gantt_len[['Finish']].apply(\n",
+    "df_gantt_len['Finish'] = df_gantt_len[['Finish']].apply(b\n",
     "    lambda v: '{}-12-31'.format(str(int(v[0])) if not math.isnan(v[0]) else '2020'), axis=1)\n",
     "\n",
     "fig = FF.create_gantt(\n",
     "    df_gantt_len, showgrid_x=True, showgrid_y=True,\n",
     "    title='Famous Russian Writers Years of Life sotred by Length')\n",
     "py.iplot(fig, filename='russian-writers-years-of-life-len-sorted', world_readable=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see \"EDIT CHART\" button at the bottom rigth on graphics.<br/>\n",
+    "It's interesting button – thanks to <a href=\"https://plot.ly\">Plotly</a><br/>\n",
+    "Online Graph Maker opens on click.<br/>\n",
+    "But seems like it's not possible to get filterable by writers in that Online Maker data grid with current <a href=\"https://github.com/plotly/plotly.py/blob/v2.0.0/plotly/figure_factory/_gantt.py#L582\">create_gantt()</a> implementation.<br/>\n",
+    "\n",
+    "The next graph is more complicate a little but it has out of the box ability to be editable through Plotly Online Graph Maker."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~boorstat/36.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bars = df.copy()\n",
+    "df_bars['birth_year'] = df_bars[['birth_year']].apply(\n",
+    "    lambda v: int(v[0]), axis=1)\n",
+    "df_bars['death_year'] = df_bars[['death_year']].apply(\n",
+    "    lambda v: int(v[0]) if not math.isnan(v[0]) else 2020, axis=1)\n",
+    "\n",
+    "df_bars['life_len'] = df_bars[['birth_year', 'death_year']].apply(\n",
+    "    lambda v: v[1] - v[0], axis=1)\n",
+    "\n",
+    "offsets = go.Bar(\n",
+    "    y=df_bars['name'],\n",
+    "    x=df_bars['birth_year'],\n",
+    "    name='birth',\n",
+    "    orientation = 'h',\n",
+    "    opacity=0\n",
+    ")\n",
+    "lifes = go.Bar(\n",
+    "    y=df_bars['name'],\n",
+    "    x=df_bars['life_len'],\n",
+    "    name='life len',\n",
+    "    orientation = 'h',\n",
+    "    hoverinfo=df_bars[['name', 'death_year']].apply(\n",
+    "        lambda v: '{name} ({year})'.format(name=v[0], year=v[1]), axis=1)\n",
+    ")\n",
+    "\n",
+    "data = [offsets, lifes]\n",
+    "layout = go.Layout(\n",
+    "    barmode='stack',\n",
+    "    showlegend=False,\n",
+    "    margin={'l': 200},\n",
+    "    xaxis={\n",
+    "        'autorange': False,\n",
+    "        'range': [1650, 2020]}\n",
+    "    \n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "py.iplot(fig, filename='russian-writers-life-bars')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                Alexander Ablesimov (1783)\n",
+       "1                     Fyodor Abramov (1983)\n",
+       "2                     Grigory Adamov (1945)\n",
+       "3                   Georgy Adamovich (1972)\n",
+       "4                Alexander Afanasyev (1871)\n",
+       "5    Alexander Afanasyev-Chuzhbinsky (1875)\n",
+       "6               Alexander Afinogenov (1941)\n",
+       "7                          M. Ageyev (1973)\n",
+       "8                  Chinghiz Aitmatov (2008)\n",
+       "9                       David Aizman (1922)\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bars[['name', 'death_year']].apply(\n",
+    "        lambda v: '{name} ({year})'.format(name=v[0], year=v[1]), axis=1)"
    ]
   },
   {
