--- a/.ipynb/2017-03-13_russian-writers-csv.ipynb
+++ b/.ipynb/2017-03-13_russian-writers-csv.ipynb
@@ -351,10 +351,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see \"EDIT CHART\" button at the bottom rigth on graphics.<br/>\n",
+    "You can see the \"EDIT CHART\" button at the bottom rigth on graphics.<br/>\n",
     "It's interesting button – thanks to <a href=\"https://plot.ly\">Plotly</a><br/>\n",
     "Online Graph Maker opens on click.<br/>\n",
-    "But seems like it's not possible to get filterable by writers in that Online Maker data grid with current <a href=\"https://github.com/plotly/plotly.py/blob/v2.0.0/plotly/figure_factory/_gantt.py#L582\">create_gantt()</a> implementation.<br/>\n",
+    "But seems like it's not possible to get filterable by writers data grid in that Online Maker with current <a href=\"https://github.com/plotly/plotly.py/blob/v2.0.0/plotly/figure_factory/_gantt.py#L582\">create_gantt()</a> implementation.<br/>\n",
     "\n",
     "The next graph is more complicate a little but it has out of the box ability to be editable through Plotly Online Graph Maker."
    ]
@@ -420,6 +420,38 @@
     "fig = go.Figure(data=data, layout=layout)\n",
     "py.iplot(fig, filename='russian-writers-life-bars')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Click \"EDIT CHART\" at the bottom of graph.<br />\n",
+    "You should see something like this after nearly 10 secs of loading:\n",
+    "\n",
+    "<a href=\"https://boorstat.github.io/images/plolty-online-graph-maker/after-open.png\"><img src=\"https://boorstat.github.io/images/plolty-online-graph-maker/after-open.png\" /></a>\n",
+    "\n",
+    "Select Filter in menu and click \"+ Filter\" button.<br />\n",
+    "You can fill fields in that manner:\n",
+    "\n",
+    "<a href=\"https://boorstat.github.io/images/plolty-online-graph-maker/after-filter-added.png\"><img src=\"https://boorstat.github.io/images/plolty-online-graph-maker/after-filter-added.png\" /></a>\n",
+    "\n",
+    "Try to experiment with writers list on graph.<br />\n",
+    "Then you can export the result to image formats, data like json, code (python, node.js and others) or even html.<br />\n",
+    "But registration in Plot.ly is needed to get these features work.<br />\n",
+    "After logged in let's return to Graph Maker and click \"Save\" button.<br />\n",
+    "Then you can find saved graph in Your Files and any of them you can export to needed format.\n",
+    "\n",
+    "<a href=\"https://boorstat.github.io/images/plolty-online-graph-maker/export-dlg-preview.png\"><img src=\"https://boorstat.github.io/images/plolty-online-graph-maker/export-dlg-preview.png\" /></a>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -636,6 +668,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
