--- a/.ipynb/2017-03-25_russian-writers-csv.ipynb
+++ b/.ipynb/2017-03-25_russian-writers-csv.ipynb
@@ -66,9 +66,9 @@
    "metadata": {},
    "source": [
     "It was always interesting for me how different russian writers relate to each other.<br/>\n",
-    "For example, could Dostoyevky meet Gogol?<br/>\n",
-    "We are going to create csv with brief info like year of life for all russian writers.<br/>\n",
-    "I did not think too much and just parse <a href=\"https://en.wikipedia.org/wiki/List_of_Russian-language_writers\">appropriate wiki page</a> – thanks to it:"
+    "For example, could Dostoyevky meet Gogol at all or not?<br/>\n",
+    "We are going to create csv with brief info like years of life for all russian writers.<br/>\n",
+    "I did not think too much and just parse <a href=\"https://en.wikipedia.org/wiki/List_of_Russian-language_writers\">appropriate wiki page</a> – thanks to it very much:"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "metadata": {},
    "source": [
     "<a href=\"https://raw.githubusercontent.com/boorstat/boorstat-files/master/lit/russian/russian-writers.csv\">Russian Writers CSV</a><br/>\n",
-    "<a href=\"https://github.com/boorstat/boorstat-files/blob/master/lit/russian/russian-writers.csv\">The same in github viewer</a>"
+    "<a href=\"https://github.com/boorstat/boorstat-files/blob/master/lit/russian/russian-writers.csv\">The same on github code</a>"
    ]
   },
   {
@@ -213,14 +213,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First – prettier looking multi-color Gantt style graph.<br/>\n",
-    "Which much easier to code in addition.\n",
-    "But no edit mode out of the box (you'll see later)."
+    "If you have dataframe – you have a graph :)\n",
+    "\n",
+    "At first – prettier looking multi-color Gantt style graph.<br/>\n",
+    "Which is much easier to code in addition."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +235,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +274,12 @@
     "]\n",
     "\n",
     "df_gantt = df[['name', 'birth_year', 'death_year']].copy()\n",
-    "df_gantt.rename(columns={'name': 'Task', 'birth_year': 'Start', 'death_year': 'Finish'}, inplace=True)\n",
+    "df_gantt.rename(\n",
+    "    columns={\n",
+    "        'name': 'Task', \n",
+    "        'birth_year': 'Start', \n",
+    "        'death_year': 'Finish'},\n",
+    "    inplace=True)\n",
     "\n",
     "df_gantt = df_gantt[df_gantt['Task'].map(\n",
     "    lambda v: any([w in v for w in FAMOUS_RUS_WRITERS]))]\n",
@@ -302,12 +308,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And the same but sorted by length of life:"
+    "And the same writers list but sorted by length of life:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -321,7 +327,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,16 +340,16 @@
     "df_gantt_len.reset_index(inplace=True, drop=True)\n",
     "\n",
     "df_gantt_len['Task'] = df_gantt_len[['Task', 'life_len']].apply(\n",
-    "    lambda v: '{name} [{len}]'.format(name=v[0].split()[-1], len=v[1]), axis=1)\n",
+    "    lambda v: '{name}'.format(name=v[0].split()[-1], len=v[1]), axis=1)\n",
     "\n",
     "df_gantt_len['Start'] = df_gantt_len[['Start']].apply(\n",
     "    lambda v: '{}-12-31'.format(str(int(v[0]))), axis=1)\n",
-    "df_gantt_len['Finish'] = df_gantt_len[['Finish']].apply(b\n",
+    "df_gantt_len['Finish'] = df_gantt_len[['Finish']].apply(\n",
     "    lambda v: '{}-12-31'.format(str(int(v[0])) if not math.isnan(v[0]) else '2020'), axis=1)\n",
     "\n",
     "fig = FF.create_gantt(\n",
     "    df_gantt_len, showgrid_x=True, showgrid_y=True,\n",
-    "    title='Famous Russian Writers Years of Life sotred by Length')\n",
+    "    title='Famous Russian Writers Years of Life sorted by Length of Life')\n",
     "py.iplot(fig, filename='russian-writers-years-of-life-len-sorted', world_readable=True)"
    ]
   },
@@ -351,17 +357,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see the \"EDIT CHART\" button at the bottom rigth on graphics.<br/>\n",
-    "It's interesting button – thanks to <a href=\"https://plot.ly\">Plotly</a><br/>\n",
-    "Online Graph Maker opens on click.<br/>\n",
-    "But seems like it's not possible to get filterable by writers data grid in that Online Maker with current <a href=\"https://github.com/plotly/plotly.py/blob/v2.0.0/plotly/figure_factory/_gantt.py#L582\">create_gantt()</a> implementation.<br/>\n",
+    "You can see the \"EDIT CHART\" button at the bottom rigth on graphs.<br/>\n",
+    "It's interesting button – thanks to <a href=\"https://plot.ly\">Plotly</a> very nuch.<br/>\n",
+    "Click it Online Graph Maker opens.<br/>\n",
     "\n",
-    "The next graph is more complicate a little but it has out of the box ability to be editable through Plotly Online Graph Maker."
+    "But seems like it's not possible to get filterable by writers data grid in that Online Maker with current <a href=\"https://github.com/plotly/plotly.py/blob/v2.0.0/plotly/figure_factory/_gantt.py#L582\">create_gantt()</a> implementation.<br/>\n",
+    "That's we are going to create the next graph.\n",
+    "Which is more complicate a little bit but it has out of the box ability to be editable through Plotly Online Graph Maker."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -375,7 +382,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,221 +452,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                Alexander Ablesimov (1783)\n",
-       "1                     Fyodor Abramov (1983)\n",
-       "2                     Grigory Adamov (1945)\n",
-       "3                   Georgy Adamovich (1972)\n",
-       "4                Alexander Afanasyev (1871)\n",
-       "5    Alexander Afanasyev-Chuzhbinsky (1875)\n",
-       "6               Alexander Afinogenov (1941)\n",
-       "7                          M. Ageyev (1973)\n",
-       "8                  Chinghiz Aitmatov (2008)\n",
-       "9                       David Aizman (1922)\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df_bars[['name', 'death_year']].apply(\n",
-    "        lambda v: '{name} ({year})'.format(name=v[0], year=v[1]), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Looks very exciting as for me:)<br/>\n",
-    "Time to plot Pushkin's Duels Histogram."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>Task</th>\n",
-       "      <th>Start</th>\n",
-       "      <th>Finish</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Anna Akhmatova</td>\n",
-       "      <td>1889-12-31</td>\n",
-       "      <td>1966-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>48</td>\n",
-       "      <td>Isaak Babel</td>\n",
-       "      <td>1894-12-31</td>\n",
-       "      <td>1940-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>70</td>\n",
-       "      <td>Andrei Bely</td>\n",
-       "      <td>1880-12-31</td>\n",
-       "      <td>1934-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>83</td>\n",
-       "      <td>Alexander Blok</td>\n",
-       "      <td>1880-12-31</td>\n",
-       "      <td>1921-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>100</td>\n",
-       "      <td>Mikhail Bulgakov</td>\n",
-       "      <td>1891-12-31</td>\n",
-       "      <td>1940-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>103</td>\n",
-       "      <td>Ivan Bunin</td>\n",
-       "      <td>1870-12-31</td>\n",
-       "      <td>1953-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>113</td>\n",
-       "      <td>Anton Chekhov</td>\n",
-       "      <td>1860-12-31</td>\n",
-       "      <td>1904-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>139</td>\n",
-       "      <td>Fyodor Dostoyevsky</td>\n",
-       "      <td>1821-12-31</td>\n",
-       "      <td>1881-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>193</td>\n",
-       "      <td>Nikolai Gogol</td>\n",
-       "      <td>1809-12-31</td>\n",
-       "      <td>1852-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>196</td>\n",
-       "      <td>Ivan Goncharov</td>\n",
-       "      <td>1812-12-31</td>\n",
-       "      <td>1891-12-31</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index                Task       Start      Finish\n",
-       "0     11      Anna Akhmatova  1889-12-31  1966-12-31\n",
-       "1     48         Isaak Babel  1894-12-31  1940-12-31\n",
-       "2     70         Andrei Bely  1880-12-31  1934-12-31\n",
-       "3     83      Alexander Blok  1880-12-31  1921-12-31\n",
-       "4    100    Mikhail Bulgakov  1891-12-31  1940-12-31\n",
-       "5    103          Ivan Bunin  1870-12-31  1953-12-31\n",
-       "6    113       Anton Chekhov  1860-12-31  1904-12-31\n",
-       "7    139  Fyodor Dostoyevsky  1821-12-31  1881-12-31\n",
-       "8    193       Nikolai Gogol  1809-12-31  1852-12-31\n",
-       "9    196      Ivan Goncharov  1812-12-31  1891-12-31"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_gantt[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~boorstat/12.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "life_years = {'start': 1799, 'end': 1837, 'size': 1}\n",
-    "\n",
-    "nobody_shot_data = go.Histogram(\n",
-    "    x=df[(df['pushkin_shot'] == 0) & (df['opponent_shot'] == 0)]['year'],\n",
-    "    xbins=life_years,\n",
-    "    name='Nobody'\n",
-    ")\n",
-    "\n",
-    "only_opponent_shot_data = go.Histogram(\n",
-    "    x=df[(df['pushkin_shot'] == 0) & (df['opponent_shot'] == 1)]['year'],\n",
-    "    xbins=life_years,\n",
-    "    name='Only opponent'\n",
-    ")\n",
-    "\n",
-    "both_shot_data = go.Histogram(\n",
-    "    x=df[(df['pushkin_shot'] == 1) & (df['opponent_shot'] == 1)]['year'],\n",
-    "    xbins=life_years,\n",
-    "    name='Both shot'\n",
-    ")\n",
-    "\n",
-    "data = [only_opponent_shot_data, nobody_shot_data, both_shot_data]\n",
-    "layout = go.Layout(barmode='stack', title=\"Pushkin's Duels Histogram\")\n",
-    "fig = go.Figure(data=data, layout=layout)\n",
-    "\n",
-    "py.iplot(fig, filename='pushkin-duels')"
+    "Hope you enjoyed!"
    ]
   }
  ],
