--- a/.ipynb/2017-03-11_pushkin-duels-csv.ipynb
+++ b/.ipynb/2017-03-11_pushkin-duels-csv.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +253,7 @@
        "4              0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -287,13 +287,13 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "life_years = {'start': 1799, 'end': 1837, 'size': 1}\n",
+    "life_years = {'start': 1799, 'end': 1838, 'size': 1}\n",
     "\n",
     "nobody_shot_data = go.Histogram(\n",
     "    x=df[(df['pushkin_shot'] == 0) & (df['opponent_shot'] == 0)]['year'],\n",
@@ -314,7 +314,7 @@
     ")\n",
     "\n",
     "data = [only_opponent_shot_data, nobody_shot_data, both_shot_data]\n",
-    "layout = go.Layout(barmode='stack', title=\"Pushkin's Duels Histogram\")\n",
+    "layout = go.Layout(barmode='stack', title='Pushkin\\'s Duels Histogram (<a href=\"https://boorstat.github.io/pushkin/duels/2017/03/11/pushkin-duels-csv.html\">link to source</a>)')\n",
     "fig = go.Figure(data=data, layout=layout)\n",
     "\n",
     "py.iplot(fig, filename='pushkin-duels')"
@@ -326,6 +326,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
