--- a/.ipynb/2017-03-25_russian-writers-csv.ipynb
+++ b/.ipynb/2017-03-25_russian-writers-csv.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +235,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
     "\n",
     "fig = FF.create_gantt(\n",
     "    df_gantt_birth, showgrid_x=True, showgrid_y=True,\n",
-    "    title='Famous Russian Writers Years of Life sotred by Birth')\n",
+    "    title='Famous Russian Writers Years of Life sorted by Birth (<a href=\"https://boorstat.github.io/lit/russian/2017/03/25/russian-writers-csv.html\">link to source</a>)')\n",
     "py.iplot(fig, filename='russian-writers-years-of-life-start-sorted', world_readable=True)"
    ]
   },
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -327,7 +327,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
     "\n",
     "fig = FF.create_gantt(\n",
     "    df_gantt_len, showgrid_x=True, showgrid_y=True,\n",
-    "    title='Famous Russian Writers Years of Life sorted by Length of Life')\n",
+    "    title='Famous Russian Writers Years of Life sorted by Length of Life (<a href=\"https://boorstat.github.io/lit/russian/2017/03/25/russian-writers-csv.html\">link to source</a>)')\n",
     "py.iplot(fig, filename='russian-writers-years-of-life-len-sorted', world_readable=True)"
    ]
   },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -382,7 +382,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,13 +415,15 @@
     "\n",
     "data = [offsets, lifes]\n",
     "layout = go.Layout(\n",
+    "    title='All Russian Writers Years of Life',\n",
     "    barmode='stack',\n",
     "    showlegend=False,\n",
     "    margin={'l': 200},\n",
     "    xaxis={\n",
     "        'autorange': False,\n",
-    "        'range': [1650, 2020]}\n",
-    "    \n",
+    "        'range': [1650, 2020],\n",
+    "        'title': '<a href=\"https://boorstat.github.io/lit/russian/2017/03/25/russian-writers-csv.html\">Link to source</a>'\n",
+    "    }\n",
     ")\n",
     "\n",
     "fig = go.Figure(data=data, layout=layout)\n",
